--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -38,11 +38,7 @@ test_bench:
   stage: test
 
   rules:
-    - if: '$CI_COMMIT_MESSAGE' =~ 'Bench: [0-9]+'
+    - if: '$CI_COMMIT_MESSAGE =~ "Bench: [0-9]+"'
 
   script:
-    - _BENCHMARK=$(echo "$CI_COMMIT_MESSAGE" | fgrep "Bench" | sed "s/Bench: //g")
-    - echo "Expected benchmark is $_BENCHMARK"
-    - _OUTPUT=$(./stash bench | fgrep "NODES:" | sed "s/NODES: //g")
-    - echo "Got $_OUTPUT"
-    - test "$_BENCHMARK" == "$_OUTPUT" || exit 1
+    - sh utils/check_bench.sh "$CI_COMMIT_MESSAGE" || exit 1
