Changed Makefile to get faster builds on OB machines Bench: 16463248

--- a/src/Makefile
+++ b/src/Makefile
@@ -18,27 +18,35 @@
 
 SOURCES := $(wildcard sources/*/*.c)
 
-ifeq ($(OS),Windows_NT)
-    REMOVE := del
-    SILENCE := >nul 2>&1 || (exit 0)
-    ifeq ($(EXE),)
-        EXE=stash-bot.exe
-    endif
-    SOURCES := $(subst /,\,$(SOURCES))
-else
-    REMOVE := rm -f
-    SILENCE := >/dev/null 2>&1
-    ifeq ($(EXE),)
-        EXE=stash-bot
-    endif
-endif
-
 OBJECTS := $(SOURCES:%.c=%.o)
 DEPENDS := $(SOURCES:%.c=%.d)
-native = yes
+native = no
 
 CFLAGS += -Wall -Wextra -Werror -O3 -flto
+CPPFLAGS += -MMD -I include
 LDFLAGS += -lpthread -lm
+
+# If no arch is specified, we select a prefetch+popcnt build by default.
+# If you want to build on a different architecture, please specify it in the
+# command with ARCH=something. If you want to disable all arch-specific
+# optimizations, use ARCH=unknown.
+
+ifeq ($(ARCH),)
+	ARCH=x86-64-modern
+endif
+
+# Check if we can accelerate a bit the build process when using -jXX
+
+compiler_version = $(shell $(CC) --version)
+
+# Add .exe to the executable name if we are on Windows
+
+EXE=stash-bot
+ifeq ($(OS),Windows_NT)
+	EXE=stash-bot.exe
+endif
+
+# Enable use of PREFETCH instruction
 
 ifeq ($(ARCH),x86-64)
     CFLAGS += -DUSE_PREFETCH
@@ -70,14 +78,16 @@ endif
 all: $(EXE)
 
 $(EXE): $(OBJECTS)
-	$(CC) $(CFLAGS) -o $@ $^ $(LDFLAGS)
-
-%.o: %.c
-	$(CC) $(CFLAGS) -c -MMD -I include -o $@ $<
+	+$(CC) $(CFLAGS) -o $@ $^ $(LDFLAGS)
 
 -include $(DEPENDS)
 
 clean:
-	$(REMOVE) $(OBJECTS) $(DEPENDS) $(SILENCE)
+	rm -f $(OBJECTS) $(DEPENDS)
 
-re: clean all
+fclean: clean
+	rm -f $(EXE)
+
+re: fclean all
+
+.PHONY: all clean fclean re
