Fixed 'make re' command on Windows Bench: 12368758

--- a/src/Makefile
+++ b/src/Makefile
@@ -97,7 +97,7 @@ fclean: clean
 	$(REMOVE) $(EXE) $(SILENCE)
 
 re:
-	+make fclean
-	+make all
+	+$(MAKE) fclean
+	+$(MAKE) all
 
 .PHONY: all clean fclean re
