Added new warnings to Makefile, some minor fixes on the code Bench: 13113802

--- a/src/Makefile
+++ b/src/Makefile
@@ -22,7 +22,7 @@ OBJECTS := $(SOURCES:%.c=%.o)
 DEPENDS := $(SOURCES:%.c=%.d)
 native = no
 
-CFLAGS += -Wall -Wextra -Werror -O3 -flto
+CFLAGS += -Wall -Wextra -Wcast-qual -Wshadow -Werror -O3 -flto
 CPPFLAGS += -MMD -I include
 LDFLAGS += -lpthread -lm
 
