Updated release script + fixed flag cloning while running 'make re' with specific builds Bench: 13720671

--- a/src/Makefile
+++ b/src/Makefile
@@ -87,6 +87,6 @@ fclean: clean
 
 re:
 	$(MAKE) fclean
-	+$(MAKE) all
+	+$(MAKE) all CFLAGS="$(CFLAGS)" CPPFLAGS="$(CPPFLAGS)" LDFLAGS="$(LDFLAGS)"
 
 .PHONY: all clean fclean re
