Have the Makefile autodetect the architecture if left unspecified
Also drop non-GNU compiler support entirely.

Bench: 3,740,491

--- a/src/Makefile
+++ b/src/Makefile
@@ -20,57 +20,104 @@ SOURCES := $(wildcard sources/*.c)
 
 OBJECTS := $(SOURCES:%.c=%.o)
 DEPENDS := $(SOURCES:%.c=%.d)
-native = no
 
-CFLAGS += -Wall -Wextra -Wcast-qual -Wshadow -Werror -O3 -flto
-CPPFLAGS += -MMD -I include
-LDFLAGS += -lpthread -lm
+ARCH ?=
+NATIVE ?= no
+CFLAGS ?= -O3 -flto
+CPPFLAGS ?= -Werror
+LDFLAGS ?=
 
-# If no arch is specified, we select a prefetch+popcnt build by default.
-# If you want to build on a different architecture, please specify it in the
-# command with ARCH=something. If you want to disable all arch-specific
-# optimizations, use ARCH=unknown.
+user_CFLAGS := $(CFLAGS)
+user_CPPFLAGS := $(CPPFLAGS)
+user_LDFLAGS := $(LDFLAGS)
+
+own_CFLAGS := -std=gnu11
+own_CPPFLAGS := -Wall -Wextra -Wcast-qual -Wshadow -Wvla -MMD -I include
+own_LDFLAGS := -lpthread -lm
+
+# If no arch is specified, we try to autodetect the target architecture if the
+# compiler allows us to do so.
 
 ifeq ($(ARCH),)
-	ARCH=x86-64-modern
+	specs := $(shell echo | $(CC) -march=native -E -dM -)
+	ifneq ($(findstring __x86_64__,$(specs)),)
+		ifneq ($(findstring __BMI2__,$(specs)),)
+			# Avoid enabling BMI2 for old Ryzen CPUs who emulate the instruction in
+			# microcode.
+			ifeq ($(filter __znver1 __znver2,$(specs)),)
+				arch:=x86-64-bmi2
+			else
+				arch:=x86-64-popcnt
+			endif
+		else
+			ifneq ($(findstring __POPCNT__,$(specs)),)
+				arch:=x86-64-popcnt
+			else
+				ifneq ($(findstring __SSE__,$(specs)),)
+					arch:=x86-64
+				else
+					arch:=generic
+				endif
+			endif
+		endif
+	else
+		arch:=generic
+	endif
+else
+	maybe_arch:=$(filter x86-64-bmi2 x86-64-popcnt x86-64-modern x86-64 generic,$(firstword $(ARCH)))
+
+	ifneq ($(maybe_arch),)
+		arch:=$(maybe_arch)
+
+		ifeq ($(arch),x86-64-modern)
+			arch:=x86-64-popcnt
+			_ := $(warning Using 'x86-64-modern' as an architecture is deprecated, and will be removed in the future. Use 'x86-64-popcnt' instead.)
+		endif
+	else
+		arch:=generic
+		_ := $(warning Unknown specified architecture '$(ARCH)'. Defaulting to the generic build.)
+	endif
 endif
 
-# Add .exe to the executable name if we are on Windows
+# Add .exe to the executable name if we are on Windows, and link the binary statically.
 
 ifeq ($(OS),Windows_NT)
 	EXE = stash-bot.exe
+	own_LDFLAGS += -static
 else
 	EXE = stash-bot
 endif
 
 # Enable use of PREFETCH instruction
 
-ifeq ($(ARCH),x86-64)
-    CFLAGS += -DUSE_PREFETCH
-    ifneq ($(native),yes)
-        CFLAGS += -msse
+ifeq ($(arch),x86-64)
+    ifneq ($(NATIVE),yes)
+        own_CFLAGS += -msse
     endif
 endif
 
-ifeq ($(ARCH),x86-64-modern)
-    CFLAGS += -DUSE_PREFETCH -DUSE_POPCNT
-    ifneq ($(native),yes)
-        CFLAGS += -msse -msse3 -mpopcnt
+ifeq ($(arch),x86-64-popcnt)
+    ifneq ($(NATIVE),yes)
+        own_CFLAGS += -msse -msse3 -mpopcnt
     endif
 endif
 
-ifeq ($(ARCH),x86-64-bmi2)
-    CFLAGS += -DUSE_PREFETCH -DUSE_POPCNT -DUSE_PEXT
-    ifneq ($(native),yes)
-        CFLAGS += -msse -msse3 -mpopcnt -msse4 -mbmi2
+ifeq ($(arch),x86-64-bmi2)
+    own_CFLAGS += -DUSE_PEXT
+    ifneq ($(NATIVE),yes)
+        own_CFLAGS += -msse -msse3 -mpopcnt -msse4 -mbmi2
     endif
 endif
 
 # If native is specified, build will try to use all available CPU instructions
 
-ifeq ($(native),yes)
-    CFLAGS += -march=native
+ifeq ($(NATIVE),yes)
+    own_CFLAGS += -march=native
 endif
+
+override CFLAGS += $(own_CFLAGS)
+override CPPFLAGS += $(own_CPPFLAGS)
+override LDFLAGS += $(own_LDFLAGS)
 
 all: $(EXE)
 
@@ -87,6 +134,6 @@ fclean: clean
 
 re:
 	$(MAKE) fclean
-	+$(MAKE) all CFLAGS="$(CFLAGS)" CPPFLAGS="$(CPPFLAGS)" LDFLAGS="$(LDFLAGS)"
+	+$(MAKE) all CFLAGS="$(user_CFLAGS)" CPPFLAGS="$(user_CPPFLAGS)" LDFLAGS="$(user_LDFLAGS)"
 
 .PHONY: all clean fclean re
