Minor cleanups for v36
- Removed 'x86-64-modern' as a valid target architecture in the Makefile,
  replaced by 'x86-64-popcnt'
- Cleaned up the King safety eval function by inverting the conditional and
  making it an early return instead
- Updated the UciOptionFields declaration in main.c so that it uses named fields
  for the sake of clarity
- Updated the release.sh script because of the recent changes to the Makefile
  behavior, and also made the Linux builds usable by using static linkage
- Renamed the contributing help file so that it gets detected correctly by
  GitHub
- Extended the 'id author' to reference all direct code contributors via the
  added AUTHORS file

Bench: 4,139,804

--- a/src/Makefile
+++ b/src/Makefile
@@ -70,8 +70,7 @@ else
 		arch:=$(maybe_arch)
 
 		ifeq ($(arch),x86-64-modern)
-			arch:=x86-64-popcnt
-			_ := $(warning Using 'x86-64-modern' as an architecture is deprecated, and will be removed in the future. Use 'x86-64-popcnt' instead.)
+			_ := $(error Using 'x86-64-modern' as an architecture has been removed since the v36 release. Use 'x86-64-popcnt' instead)
 		endif
 	else
 		arch:=generic
